# sqlx-offline-rebuild

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  common.rs  from.rs  main.rs  to.rs
