[package]
name = "cmp-sqlx-data"
version = "1.0.0"
edition = "2021"
authors = ["ocxide"]
description = "CLI tool to rebuild rust's sqlx's offline generated data into a single file"
repository = "https://github.com/ocxide/sqlx-offline-rebuild"

[dependencies]
clap = { version= "4.4.12", features = ["derive"] }
serde = { version="1.0.193", features=["derive"] }
serde_json = "1.0.108"
